Sun Mar  7 18:19:07 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* mgt.c (process_has_exited): Use mach_port_destroy instead of
 	mach_port_deallocate to release P->p_msgport.
	(complete_exit): Likewise for P->p_task.  
	These changes eliminate a race; we are destroying the receiver of
 	the dead-name notifications on these ports, but if that means we
 	lose a notification, then the ref-count on the name will get
 	incremented and we can't re-decrement it since we never hear the
 	notification.

1999-03-06  Mark Kettenis  <kettenis@gnu.org>

	* notify.c (do_mach_notify_dead_name): Deallocate reference to
	DEADPORT.

Sat Feb 20 06:26:17 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* stubs.c (send_signal): Typo in comment.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* cpu-types.c: Test with #ifdef for CPU_TYPE_I486, CPU_TYPE_PENTIUM,
	CPU_TYPE_PENTIUMPRO, CPU_TYPE_POWERPC, since not all <mach/machine.h>
	versions have them.

Tue Sep 16 15:26:04 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* host.c (hostid, hostname, hostnamelen): Delete variables.
	(S_proc_sethostid, S_proc_gethostid, S_proc_sethostname,
	S_proc_gethostname): Delete functions.

Wed Aug 20 14:06:46 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (main): New args for
	ports_manage_port_operations_multithread.

1997-06-30  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (main): Arg parsing added.  HOLD variable removed.
	(argp_program_version): New variable.
	Include <argp.h> and <version.h>.

Thu Jun 26 14:03:16 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* cpu-types.c (mach_cpu_types): Add entries for 486, 586, 686,
	and powerpc.
	(mach_cpu_subtypes): Add subtypes for new x86 subtypes.  (None
	added for powerpc yet.)

Mon Feb  3 16:52:14 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* hash.c (pid_find, task_find, task_find_nocreate, reqport_find):
	Don't dereference P if it's 0.

Fri Oct 25 20:30:22 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>